--- a/.gitignore
+++ b/.gitignore
@@ -242,4 +242,7 @@ $RECYCLE.BIN/
 # Windows shortcuts
 *.lnk
 
+### dotenv ###
+.env
+
 # End of https://www.toptal.com/developers/gitignore/api/macos,windows,linux,python,visualstudiocode,gitbook
