--- a/.gitignore
+++ b/.gitignore
@@ -1,7 +1,7 @@
 
 # Created by https://www.toptal.com/developers/gitignore/api/macos,windows,linux,python,visualstudiocode,gitbook
 # Edit at https://www.toptal.com/developers/gitignore?templates=macos,windows,linux,python,visualstudiocode,gitbook
-
+.vscode/
 ### GitBook ###
 # Node rules:
 ## Grunt intermediate storage (http://gruntjs.com/creating-plugins#storing-task-files)
