--- a/requirements.txt
+++ b/requirements.txt
@@ -1,4 +1,6 @@
 git+https://github.com/Rapptz/discord.py
+git+https://github.com/hikari-py/hikari
+git+https://github.com/FasterSpeeding/Tanjun
 python-dotenv==0.19.1
 nltk==3.6.5
 steam==1.2.0
