--- a/requirements.txt
+++ b/requirements.txt
@@ -1,7 +1,6 @@
 git+https://github.com/hikari-py/hikari
 git+https://github.com/FasterSpeeding/Tanjun
-git+https://github.com/rust-lang/rustup
-git+https://github.com/vicky5124/lavasnek_rs
+lavasnek-rs==0.1.0_alpha.1
 python-dotenv==0.19.1
 nltk==3.6.5
 steam==1.2.0
