--- a/requirements.txt
+++ b/requirements.txt
@@ -1,5 +1,5 @@
 git+https://github.com/hikari-py/hikari
-git+https://github.com/FasterSpeeding/Tanjun
+hikari-tanjun==2.3.1a1
 python-dotenv==0.19.1
 nltk==3.6.5
 steam==1.2.0
