--- a/package.json
+++ b/package.json
@@ -4,9 +4,15 @@
   "description": "- The Hashashin Bot is a lightweight Discord Bot. - Hashashin is primarily used for Steam games information. - Hashashin will continously get updated with more features. - Fully integrated with Discord slash commands.",
   "main": "index.js",
   "dependencies": {
+    "@discordjs/builders": "^0.13.0",
+    "@discordjs/rest": "^0.4.1",
+    "cross-fetch": "^3.1.5",
+    "discord-api-types": "^0.32.1",
     "discord.js": "^13.6.0",
     "dotenv": "^16.0.1",
+    "mongoose": "^6.3.3",
     "node": "^17.7.2",
+    "node-fetch": "^3.2.4",
     "node.js": "0.0.1-security"
   },
   "scripts": {
