--- a/package.json
+++ b/package.json
@@ -6,14 +6,18 @@
   "dependencies": {
     "@discordjs/builders": "^0.13.0",
     "@discordjs/rest": "^0.4.1",
+    "axios": "^0.27.2",
     "cross-fetch": "^3.1.5",
     "discord-api-types": "^0.32.1",
     "discord.js": "^13.6.0",
     "dotenv": "^16.0.1",
+    "fuzzysort": "^1.9.0",
+    "install": "^0.13.0",
     "mongoose": "^6.3.3",
     "node": "^17.7.2",
     "node-fetch": "^3.2.4",
-    "node.js": "0.0.1-security"
+    "node.js": "0.0.1-security",
+    "npm": "^8.10.0"
   },
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1"
