--- a/package.json
+++ b/package.json
@@ -5,6 +5,7 @@
   "main": "index.js",
   "dependencies": {
     "@discordjs/builders": "^0.13.0",
+    "@discordjs/opus": "^0.7.0",
     "@discordjs/rest": "^0.4.1",
     "axios": "^0.27.2",
     "cross-fetch": "^3.1.5",
